[gd_scene load_steps=2 format=3 uid="uid://dh47y1vvktajk"]

[ext_resource type="Script" uid="uid://cq3aeiivi3ihb" path="res://Scripts/Client/Player_setting/login.gd" id="1_5cd0j"]

[node name="Login" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5cd0j")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 720.0
offset_bottom = 480.0
color = Color(0.942962, 0.853235, 0.666468, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
texture_filter = 4
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -240.0
offset_right = 120.0
offset_bottom = 240.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="ColorRect_Start_game" type="ColorRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(240, 30)
layout_mode = 2
color = Color(0.850022, 0.618559, 0.478533, 1)

[node name="Name_space" type="LineEdit" parent="VBoxContainer/ColorRect_Start_game"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "Login"
flat = true

[node name="ColorRect_Start_game2" type="ColorRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(240, 30)
layout_mode = 2
color = Color(0.850022, 0.618559, 0.478533, 1)

[node name="Password_space" type="LineEdit" parent="VBoxContainer/ColorRect_Start_game2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "Password"
flat = true

[node name="ColorRect_Collection" type="ColorRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(240, 30)
layout_mode = 2
color = Color(0.850022, 0.618559, 0.478533, 1)

[node name="Login_button" type="Button" parent="VBoxContainer/ColorRect_Collection"]
layout_mode = 0
offset_right = 240.0
offset_bottom = 30.0
theme_override_font_sizes/font_size = 14
text = "Start_game"
flat = true

[connection signal="pressed" from="VBoxContainer/ColorRect_Collection/Login_button" to="." method="_on_login_pressed"]
